fixing search input width on smaller displays

--- a/assets/sass/layouts/_navigation.scss
+++ b/assets/sass/layouts/_navigation.scss
@@ -916,6 +916,12 @@ Main components
 		box-shadow: inset 0 1px 0 $color-3, 0 3px 6px rgba(#000, .05);
 		@include appearance(none);
 
+
+	  	@include MQ(M) {
+			width: 100%;
+		  	padding-left: 20px;
+		}
+
 		@include placeholder {
 			color: darken($color-3, 10%);
 		}
